navBar and footer style changed

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     justify-content: space-around;
     text-align: center;
-    padding: 0 5px ;
+    padding: 0 0 ;
     /* background-color: aqua; */
     /* background-image: url('../image/bg.jpg'); */
     background-image: url('https://techcrunch.com/wp-content/uploads/2020/03/GettyImages-1208505324.jpg?w=730&crop=1');
